--- a/example/pkg.yaml
+++ b/example/pkg.yaml
@@ -15,10 +15,10 @@ packages:
       path: https://github.com/fmtlib/fmt.git
       tag: 4.1.0
       build:
-      - RUN {CACHE} cmake {SRC_DIR} -DCMAKE_INSTALL_PREFIX={PKG_DIR}; make -j4; make install
+      - RUN {{.CACHE}} cmake {{.SRC_DIR}} -DCMAKE_INSTALL_PREFIX={{.PKG_DIR}}; make -j {{.CORES}}; make install
       cmake_lib: |
-        include_directories({CMAKE_VENDOR_PATH_PKG}/include)
-        link_directories({CMAKE_VENDOR_PATH_PKG}/lib)
+        include_directories({{.CMAKE_VENDOR_PATH_PKG}}/include)
+        link_directories({{.CMAKE_VENDOR_PATH_PKG}}/lib)
 
   files:
     catch2:
@@ -26,21 +26,21 @@ packages:
       files:
         catch.hpp: catch2.hpp
       build:
-      - CP catch2.hpp {INCLUDE}
+      - CP catch2.hpp {{.INCLUDE}}/catch2.hpp
     cpptoml:
       path: https://raw.githubusercontent.com/skystrife/cpptoml/master/include
       files:
         cpptoml.h: toml.hpp
       build:
-      - CP toml.hpp {INCLUDE}
+      - CP toml.hpp {{.INCLUDE}}/toml.hpp
 
 build:
   linux:
-  - RUN {CACHE} cmake {SRC_DIR} -DCMAKE_INSTALL_PREFIX={PKG_DIR}; make -j4; make install
+  - RUN {{.CACHE}} cmake {{.SRC_DIR}} -DCMAKE_INSTALL_PREFIX={{.PKG_DIR}}; make -j {{.CORES}}; make install
   darwin:
-  - RUN {CACHE} cmake {SRC_DIR} -DCMAKE_INSTALL_PREFIX={PKG_DIR}; make -j4; make install
+  - RUN {{.CACHE}} cmake {{.SRC_DIR}} -DCMAKE_INSTALL_PREFIX={{.PKG_DIR}}; make -j {{.CORES}}; make install
 
 cmake_build: |
-  include_directories({CMAKE_VENDOR_PATH_PKG}/include)
-  link_directories({CMAKE_VENDOR_PATH_PKG}/lib)
+  include_directories({{C.MAKE_VENDOR_PATH_PKG}}/include)
+  link_directories({{.CMAKE_VENDOR_PATH_PKG}}/lib)
 
