feat(fetch): add support for package fallback/default builder commands
fallback builder commands will be used if the platform builder commands is not specified

--- a/example/pkg.yaml
+++ b/example/pkg.yaml
@@ -34,6 +34,8 @@ dependencies:
         - CP toml.hpp {{.INCLUDE}}/toml.hpp
 
 build:
+  fallback:
+    - RUN {{.CACHE}} cmake {{.SRC_DIR}} -DCMAKE_INSTALL_PREFIX={{.PKG_DIR}}; make -j {{.CORES}}; make install
   linux:
     - RUN {{.CACHE}} cmake {{.SRC_DIR}} -DCMAKE_INSTALL_PREFIX={{.PKG_DIR}}; make -j {{.CORES}}; make install
   darwin:
