feat(fetch): download package src using mirror specified by `git-replace` in pkg.yaml and pkg config

--- a/example/pkg.config.yaml
+++ b/example/pkg.config.yaml
@@ -2,3 +2,6 @@ auth:
   github.com:
     user: githubuser
     token: my_token
+
+git-replace:
+  github.com/google/googletest: gitee.com/mirrors/googletest
