feat(fetch): support `features`: group optional packages into `features` and enables/disable them
We can now use `features` in yaml to group optional package into different feature.
If a feature is enables, the related pacakges in this feature will be enabled and built.

--- a/example/pkg.yaml
+++ b/example/pkg.yaml
@@ -7,6 +7,14 @@ args:
 
 pkg: "github.com/genshen/pkg"
 
+
+features:
+ default:
+   needs: [pot_hip]
+ pot_hip:
+   deps: ["github.com/misa-md/potential"]
+   needs: []
+
 dependencies:
   packages:
     github.com/google/googletest: {version: release-1.8.0, target: GTest}
